# node-server-app/api/docs/swagger.yaml
@@ -175,7 +175,11 @@ paths:
               *  jpeg 
 
           in: formData
-          type: file
+          type: array
+          items:
+            type: file
+            minItems: 0
+            maxItems: 10
         - name:  title
           description: Article title
           in: formData
@@ -205,7 +209,28 @@ paths:
             $ref: '#definitions/Error'
         500: 
           description: INTERNAL SERVER ERROR
-
+  /content/all-content:
+    get:
+      security:
+      - Bearer: []
+      tags:
+      - Content
+      summary: Get all published content
+      description: This endpoint enable to get all published content by all users in whole history
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#definitions/ContentResponse'
+        401:
+          description: UNAUTHORIZED
+          schema:
+            $ref: '#definitions/Error'
+        500: 
+          description: INTERNAL SERVER ERROR
+    
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -232,25 +257,25 @@ definitions:
       properties:
         login:
           type: string
-          example: user123
+          example: "user123"
         password:
           type: string
-          example: Password123
+          example: "Password123"
         email:
           type: string
-          example: example@gmail.com
+          example: "example@gmail.com"
         role:
           type: string
-          example: FORESTER
+          example: "FORESTER"
           enum:
           - FORESTER
           - USER
         firstName:
           type: string
-          example: Jan
+          example: "Jan"
         lastName:
           type: string
-          example: Kowalski
+          example: "Kowalski"
         personalId:
           type: integer
           example: 90090515836
@@ -261,36 +286,36 @@ definitions:
     properties:
       login: 
         type: string
-        example: user123
+        example: "user123"
       password:
         type: string
-        example: Password123
+        example: "Password123"
   LoginResponse:
     properties:
       message:
         type: string
-        example: Authorization successful
+        example: "Authorization successful"
       token:
         type: string
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWFzejEyMyIsInJvbGUiOiJBRE1JTiIsImlhdCI6MTU0OTcyNjkxMiwiZXhwIjoxNTQ5NzI4NzEyfQ.zRnIv_-SIyL3uJYjs3dnki11xbptFZF0qxrW2B_Mt2U
+        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWFzejEyMyIsInJvbGUiOiJBRE1JTiIsImlhdCI6MTU0OTcyNjkxMiwiZXhwIjoxNTQ5NzI4NzEyfQ.zRnIv_-SIyL3uJYjs3dnki11xbptFZF0qxrW2B_Mt2U"
       expiresIn:
         type: integer
         example: 1800
       refreshToken: 
         type: string
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWFzejEyMyIsInJvbGUiOiJBRE1JTiIsImlhdCI6MTU0OTcyNjkxMiwiZXhwIjoxNTQ5NzI4NzEyfQ.zRnIv_-SIyL3uJYjs3dnki11xbptFZF0qxrW2B_Mt2U
+        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWFzejEyMyIsInJvbGUiOiJBRE1JTiIsImlhdCI6MTU0OTcyNjkxMiwiZXhwIjoxNTQ5NzI4NzEyfQ.zRnIv_-SIyL3uJYjs3dnki11xbptFZF0qxrW2B_Mt2U"
   RefreshToken:
     required:
       - refreshToken
     properties:
       refreshToken:
         type: string
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWVrMSIsInJvbGUiOiJGT1JFU1RFUiIsImlhdCI6MTU0OTgyMjI4MSwiZXhwIjoxNTQ5OTA4NjgxfQ.Y4qSNGFblEm73LRxxKG-Ruf9p6hjn-4HfOzQHZn751A
+        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWVrMSIsInJvbGUiOiJGT1JFU1RFUiIsImlhdCI6MTU0OTgyMjI4MSwiZXhwIjoxNTQ5OTA4NjgxfQ.Y4qSNGFblEm73LRxxKG-Ruf9p6hjn-4HfOzQHZn751A"
   Token:
     properties:
       token:
         type: string
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWVrMSIsInJvbGUiOiJGT1JFU1RFUiIsImlhdCI6MTU0OTgyMjI4MSwiZXhwIjoxNTQ5OTA4NjgxfQ.Y4qSNGFblEm73LRxxKG-Ruf9p6hjn-4HfOzQHZn751A
+        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJsb2dpbiI6InRvbWVrMSIsInJvbGUiOiJGT1JFU1RFUiIsImlhdCI6MTU0OTgyMjI4MSwiZXhwIjoxNTQ5OTA4NjgxfQ.Y4qSNGFblEm73LRxxKG-Ruf9p6hjn-4HfOzQHZn751A"
   LoginWithFacebook:
     required:
       - facebookId
@@ -298,6 +323,52 @@ definitions:
       facebookId:
         type: integer
         example: 1231231 
-    
-
-
+  ContentResponse:
+    properties:
+      count:
+        type: integer
+        example: 1
+      content:
+        type: array
+        items: 
+          type: object
+          $ref: '#definitions/ContentDetails'
+  ContentDetails:
+    properties:
+      id:
+        type: string
+        example: "5c7ec69c20f51d31e0f39887"
+      title:
+        type: string
+        example: "Holidays"
+      subTitle: 
+        type: string
+        example: "Amazing holidays in Poland"
+      description:
+        type: string
+        example: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id vestibulum quam. Donec id fringilla urna. Etiam volutpat a augue ultricies varius. Nam auctor suscipit maximus. Etiam vel erat vehicula, pharetra nulla a, tempus tellus"
+      publisher:
+        type: string
+        example: "John Doe"
+      media:
+        type: array
+        items: 
+          type: object
+          $ref: '#definitions/Media'
+  Media:
+    properties:
+      name:
+        type: string
+        example: "image.png"
+      dimensions:
+        type: object
+        properties:
+            width:
+              type: intege
+              example: 500
+            height:
+              type: integer
+              example: 500
+      path: 
+        type: string
+        example: "http://192.168.0.73:8090/uploads/764a6a20f92050fd0ae1.png"
